[gd_scene load_steps=9 format=3 uid="uid://d31b6krl6qhyh"]

[ext_resource type="Texture2D" uid="uid://doptbkt6c8b1d" path="res://Sprites/Map/TilesetElement.png" id="1_enp8i"]
[ext_resource type="Script" path="res://interactable_object.gd" id="2_1anse"]
[ext_resource type="Script" path="res://GiveItemEffect.gd" id="3_7p02t"]
[ext_resource type="PackedScene" uid="uid://b82wwxcm0kjdy" path="res://popup.tscn" id="3_filg0"]
[ext_resource type="PackedScene" uid="uid://dd27rs1lpil6h" path="res://Scenes/Item.tscn" id="4_rpdrt"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_s74pn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1701"]
size = Vector2(15, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_wa41v"]
radius = 17.0

[node name="InteractableObject" type="StaticBody2D"]
collision_layer = 4
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_s74pn")
script = ExtResource("2_1anse")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_enp8i")
hframes = 15
vframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_b1701")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_wa41v")

[node name="Popup" parent="." instance=ExtResource("3_filg0")]

[node name="GiveItemEffect" type="Node2D" parent="."]
script = ExtResource("3_7p02t")
item_to_give = ExtResource("4_rpdrt")

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="play_effect" from="GiveItemEffect" to="." method="_on_give_item_effect_play_effect"]
